# hermes

./: .gitignore  Cargo.toml  README.md  obelisk.toml  test_implementation.sh
.beads/: .beads-credential-key  config.yaml  metadata.json
docs/: ARCHITECTURE.md  SPEC.md
src/: app.js  index.html  styles.css
src-rust/: comment_parser.rs  lib.rs  main.rs  models.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  model.rs  parser.rs
