[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src-rust/main.rs"

[lib]
name = "hermes"
path = "src-rust/lib.rs"

[dependencies]
quick-xml = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
base64 = "0.22"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[profile.dev]
debug = 1
incremental = true

[profile.dev.package."*"]
debug = false