[package]
name = "hermes-app"
version = "0.0.0"
description = "DOCX viewer with Tauri"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = { version = "2" }
tauri-plugin-dialog = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Use the existing DOCX parsing library
hermes = { path = ".." }

# Additional DOCX processing dependencies
zip = "4"
quick-xml = "0.36"
base64 = "0.22"
thiserror = "1.0"
